--- a/db/connectionDB.go.example
+++ b/db/connectionDB.go.example
@@ -13,16 +13,16 @@ var MongoC = ConnectBD()
 var clientOptions = options.Client().ApplyURI("mongodb+srv://<username>:<password>@cluster0.ywmqb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority")
 
 func ConnectDB() *mongo.Client {
-	client, err := mongo.NewClient(clientOptions)
+	client, err := mongo.Connect(context.TODO(), clientOptions)
 	if err != nil {
-		log.Fatal(err)
+		log.Fatal(err.Error())
+		return client
 	}
-	ctx, _ := context.WithTimeout(context.Background(), 10*time.Second)
-	err = client.Connect(ctx)
+	err = client.Ping(context.TODO(), nil)
 	if err != nil {
-		log.Fatal(err)
+		log.Fatal(err.Error())
+		return client
 	}
-	defer client.Disconnect(ctx)
 
 	log.Println("Connected db success")
 	return client
